--- a/Interaction project/css/education.css
+++ b/Interaction project/css/education.css
@@ -63,39 +63,153 @@ ul .e-ul {
   box-sizing: border-box;
   margin-top: 10px;
   margin-bottom: 10px;
+  width: 100%;
 }
 
 li .e-img img {
-  /*text-align: center;*/
-  width: 380px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 li .li-txt {}
 
 .li-txt h3 {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 .li-txt p, .li-txt a {
   font-size: 13px;
 }
 
-.notification {
-  padding: 10px;
-  box-sizing: border-box;
-  /*background: #9e9e9e;*/
-  background: rgba(0, 0, 0, 0.8);
+/*--  NOTIFICATION -- */
+.notification-overflow {
+  width: 100%;
+}
+
+.notification-box {
+  width: 200%;
+  transition: transform 0.2s ease-out;
+  transform: translateX(0) translateY(300px);
+
   position: fixed;
   bottom: 0;
   left: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.85);
   color: #eee;
+
+  padding-bottom: 16px;
 }
 
-.notification p {
+.notification-box.slide-up {
+  transition: transform 0.4s ease-out;
+  transform: translateY(0);
+}
+
+.notification-box.slide-left {
+  transition: transform 0.2s ease-out;
+  transform: translateX(-50%);
+}
+
+.notification-box.slide-down {
+  transition: transform 0.4s ease-out;
+  transform: translateY(300px);
+}
+
+.notification-box.slide-down-x {
+  transition: transform 0.4s ease-out;
+  transform: translateX(-50%) translateY(300px);
+}
+
+.notification-box h2 {
+  font-weight: 600;
+}
+
+.notification-box p {
   margin-bottom: 15px;
 }
 
-.ok-btn {
+.notification-1 {
+  float: left;
+	width: 50%;
+}
+
+.yes-btn {
+  background: var(--light-blue);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+
+.no-btn {
+  background: #999;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+
+.notification-2 {
+  float: left;
+	width: 50%;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+
+.x {
+  color: #999;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  position: absolute;
+  top: 2px;
+  right: 10px;
+}
+
+/* -- COOKIE -- */
+.cookie-overflow {
+  width: 100%;
+}
+
+.cookie-box {
+  width: 100%;
+  transition: transform 0.2s ease-out;
+  transform: translateX(0) translateY(300px);
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.85);
+  color: #eee;
+
+  padding-bottom: 16px;
+}
+
+.cookie-box.slide-up {
+  transition: transform 0.4s ease-out;
+  transform: translateY(0);
+}
+
+.cookie-box.slide-down {
+  transition: transform 0.4s ease-out;
+  transform: translateY(300px);
+}
+
+.cookie-box h2 {
+  font-weight: 600;
+}
+
+.cookie-box p {
+  margin-bottom: 15px;
+}
+
+.cookie-ok {
   background: var(--light-blue);
   color: #fff;
   padding: 5px 10px;
@@ -106,8 +220,12 @@ li .li-txt {}
 
 /*-- DESKTOP VERSION --*/
 @media (min-width: 640px) {
-
-  ul .e-ul{}
+  ul .e-ul{
+    width: 100%;
+    box-sizing: border-box;
+    margin-right: 10px;
+    text-align: center;
+  }
 
   .e-li {
     float: left;
