--- a/Interaction project/css/main.css
+++ b/Interaction project/css/main.css
@@ -1,5 +1,5 @@
 /*
-colors: 
+colors:
 dark blue hex: #006697;
 light blue hex: #66a3c1;
 joker hex: #8e3d5d;
@@ -39,7 +39,8 @@ p {
     font-family: 'Open Sans', sans-serif;
 }
 
-a{
+a {
+    font-family: 'Open Sans', sans-serif;
     text-decoration: none;
     color: var(--light-blue);
 }
@@ -56,8 +57,9 @@ a{
     width: fit-content;
 }
 
-
+/****************************/
 /**** Mobile first***/
+/****************************/
 
 /**** MENU*************/
 /*** This is the cross/hamburger styling**/
@@ -131,6 +133,10 @@ a{
     transform: translate(-50%, -50%);
 }
 
+.logo a{
+      color: #000;
+}
+
 .logobig{
     display: none;
 }
@@ -140,7 +146,7 @@ a{
     right: 4em;
     padding: 5px;
     margin: 0;
-    
+
 }
 
 .basket{
@@ -181,7 +187,7 @@ nav.slidedown{
     width: 15px;
     float: right;
 }
-       
+
 .main-menu li{
     margin-top: 10px;
     width: 100%;
@@ -239,7 +245,7 @@ li.open-submenu img.menu-arrow{
     background-repeat: no-repeat;
     background-size: cover;
 */
-    background-color: #999; 
+    background-color: #999;
     height: 10em;
     width: 100;
     margin-top: 20px;
@@ -298,10 +304,9 @@ li.open-submenu img.menu-arrow{
     transform: translate(-50%, -50%);
 }
 
-
 /********FOOTER*********/
 footer{
-    background-color: #666; 
+    background-color: #666;
     height: 50px
 }
 
@@ -312,51 +317,248 @@ footer p{
     font-size: 10px;
 }
 
+/****************************/
+/*-- EDUCATION E-LEARNING --*/
+/****************************/
 
+.breadcrumb {
+  margin-left: 10px;
+  color: var(--light-blue);
+  margin-top: 50px;
+  font-family: 'open sans';
+  font-size: 12px;
+}
+
+.e-title {
+  margin-left: 10px;
+}
+
+ul.e-ul {
+  overflow: hidden;
+}
+
+.e-li {
+  background: #eee;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+li .e-img img {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+li .li-txt {}
+
+.li-txt h3 {
+  font-size: 15px;
+}
+
+.li-txt p, .li-txt a {
+  font-size: 13px;
+}
+
+/*--  NOTIFICATION -- */
+.notification-overflow {
+  width: 100%;
+}
+
+.notification-box {
+  width: 200%;
+  transition: transform 0.2s ease-out;
+  transform: translateX(0) translateY(300px);
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.85);
+  color: #eee;
+
+  padding-bottom: 16px;
+}
+
+.notification-box.slide-up {
+  transition: transform 0.4s ease-out;
+  transform: translateY(0);
+}
+
+.notification-box.slide-left {
+  transition: transform 0.2s ease-out;
+  transform: translateX(-50%);
+}
+
+.notification-box.slide-down {
+  transition: transform 0.4s ease-out;
+  transform: translateY(300px);
+}
+
+.notification-box.slide-down-x {
+  transition: transform 0.4s ease-out;
+  transform: translateX(-50%) translateY(300px);
+}
+
+.notification-box h2 {
+  font-weight: 600;
+}
+
+.notification-box p {
+  margin-bottom: 15px;
+}
+
+.notification-1 {
+  float: left;
+	width: 50%;
+}
+
+.yes-btn {
+  background: var(--light-blue);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+
+.no-btn {
+  background: #999;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+
+.notification-2 {
+  float: left;
+	width: 50%;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+
+.x {
+  color: #999;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  position: absolute;
+  top: 2px;
+  right: 10px;
+}
+
+/* -- COOKIE -- */
+.cookie-overflow {
+  width: 100%;
+}
+
+.cookie-box {
+  width: 100%;
+  transition: transform 0.2s ease-out;
+  transform: translateX(0) translateY(300px);
+
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.85);
+  color: #eee;
+
+  padding-bottom: 16px;
+}
+
+.cookie-box.slide-up {
+  transition: transform 0.4s ease-out;
+  transform: translateY(0);
+}
+
+.cookie-box.slide-down {
+  transition: transform 0.4s ease-out;
+  transform: translateY(300px);
+}
+
+.cookie-box h2 {
+  font-weight: 600;
+}
+
+.cookie-box p {
+  margin-bottom: 15px;
+}
+
+.cookie-ok {
+  background: var(--light-blue);
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
 
 
 /*-- Desktop version --*/
 @media (min-width: 640px){
-    
+
     .button{
         font-size: 15px;
     }
-    
-    
+
     .logobig{
         display: block;
     }
     .logosmall{
         display: none;
     }
-    
-    
-    
-    
+
 /******The content********/
     .banner{
         height: 400px;
     }
-    
+
     .maincontent{
         margin-top: 50px;
     }
-    
+
     footer p{
         font-size: 15px;
+    }
+
+    ul .e-ul{
+      width: 100%;
+      box-sizing: border-box;
+      margin-right: 10px;
+      text-align: center;
+    }
+
+    .e-li {
+      float: left;
+      width: 31%;
+      list-style: none;
+      padding: 10px;
+      box-sizing: border-box;
+      margin-left: 10px;
+    }
+
+    li .e-img img {
+        box-sizing: border-box;
+        width: 100%;
+        text-align: left;
     }
 }
 
 /*****The second media query******/
 @media (min-width: 1036px) {
-    
-        .logo{
-        left: 9em;  
+
+    .logo{
+        left: 9em;
     }
     .hamburger{
         display: none;
     }
-    
+
     nav {
         display: block;
         max-height: 200px;
@@ -367,16 +569,16 @@ footer p{
         text-align: center;
         border-bottom: none;
     }
-    
+
     nav.main-menu{
         display: block;
 /*        transition: max-height 0.5s ease-out, opacity 0.5s ease-out;*/
     }
-    
+
     .main-menu{
         margin-top: 50px;
     }
-    
+
     .main-menu li{
         display: inline;
         font-size: 12px;
@@ -387,48 +589,48 @@ footer p{
     .main-menu > li:hover{
         background-color: #ddd;
     }
-    
+
     .main-menu >li{
         border-bottom: none;
     }
-    
+
     .main-menu img.menu-arrow{
         display: none;
     }
-    
+
     ul.submenu {
         position: absolute;
         left: 0px;
         top: 20px;
         padding: 0;
-        margin-top: 10px;
+        margin-top: 20px;
         opacity: 0;
         max-height: 0;
-        width: 190px;
+        width: 160px;
+        clear: both;
         transition: max-height 0.3s ease-out;
         font-size: 12px;
         background-color: #fff;
     }
-    
+
     .submenu a{
         padding: 5px 5px;
         transition: color 0.3s ease-out;
         display: inline-block;
     }
-    
+
     .submenu a:hover{
-        color: var(--light-blue);        
+        color: var(--light-blue);
     }
-    
+
     .main-menu li:hover .submenu{
         opacity: 1;
         max-height: 500px;
     }
-    
+
     .main-menu li img.search-icon{
         float: inherit;
         padding-left: 10px;
     }
 
 }
-
