--- a/Interaction project/css/main.css
+++ b/Interaction project/css/main.css
@@ -532,7 +532,6 @@ li .li-txt {}
   border-color: var(--dark-grey);
 }
 
-
 .inner_steps_container{
   position: relative;
   width: 300%;
@@ -540,18 +539,10 @@ li .li-txt {}
 	transform: translateX(0);
 }
 
-.reg_step{
-  float: left;
-  width: 33.33333%;
-  display: inline;
-	margin: 0;
-}
-
 .registercontainer label p{
   font-size: 16px;
   margin-top: 20px;
 }
-
 
 .inner_steps_container.next-step2{
   transform:translateX(-33.3333333%);
@@ -564,10 +555,44 @@ li .li-txt {}
   padding: 0 20px;
   margin-bottom: 20px;
 }
+.reg_step{
+  float: left;
+  width: 33.33333%;
+  display: inline;
+	margin: 0;
+}
 
 .reg_step h3{
   margin-bottom: 20px;
 }
+
+.reg-step2{
+  position: relative;
+}
+
+.step3{
+  text-align: center;
+ }
+
+ .now_registered{
+   margin-bottom: 40px;
+ }
+
+
+ input[type='text'],
+ input[type='email'],
+ input[type='password'],
+ select{
+   -webkit-appearance: none;
+ 	display: block;
+ 	font-size: 16px;
+ 	line-height: 40px;
+ 	border: solid 1px #eee;
+   width: 90%;
+   float: left;
+   background-color: white;
+ }
+
 
 /* Progressbar */
 .progressbar{
@@ -576,22 +601,20 @@ li .li-txt {}
   background-position: 50% 50%;
   margin: 20px auto;
 	background-size: 80%;
-
 }
 
 .probar1{
   background-image: url('../img/progressbar-01.png');
-
 }
 
 .probar2{
   background-image: url('../img/progressbar-02.png');
-
 }
 
 .probar3{
   background-image: url('../img/progressbar-03.png');
 }
+/* *** */
 
 
 
@@ -615,9 +638,8 @@ li .li-txt {}
   margin: 10px 0;
   position: relative;
   transition: background-size, margin, height 0.3s ease-out;
-
-
 }
+
 .qmark.qmark_focus{
   height: 23px;
   background-size: 23px;
@@ -649,39 +671,10 @@ li .li-txt {}
 .qmark.show_qtext .qtext_div{
   transform: scale(1, 1);
 }
+/* *** */
 
-input[type='text'],
-input[type='email'],
-input[type='password'],
-select{
-  -webkit-appearance: none;
-	display: block;
-	font-size: 16px;
-	line-height: 40px;
-	border: solid 1px #eee;
-  width: 90%;
-  float: left;
-  background-color: white;
-}
 
-.continue{
-  float: right;
-  border: none;
-  margin: 0px 0px 20px 0px;
-}
-.previous{
-  margin:20px 0px 20px 0px;
-  float:left;
-}
-
-.register{
-  /* position: absolute;
-  right: 40px;
-  bottom: 20px; */
-  float: right;
-  margin: 20px 0px 20px 0px;
-}
-
+/* Error messages */
 .errormessage{
   clear: left;
   color: #e30b00;
@@ -736,17 +729,28 @@ label.error2 *[required] {
 .registercontainer label.error2 .errormessage2 {
 	max-height: 30px;
 }
-.reg-step2{
-  position: relative;
+/* *** */
+
+
+
+/* Buttons for registering */
+.continue{
+  float: right;
+  border: none;
+  margin: 0px 0px 20px 0px;
+}
+.previous{
+  margin:20px 0px 20px 0px;
+  float:left;
 }
 
-.step3{
-  text-align: center;
- }
-
- .now_registered{
-   margin-bottom: 40px;
- }
+.register{
+  /* position: absolute;
+  right: 40px;
+  bottom: 20px; */
+  float: right;
+  margin: 20px 0px 20px 0px;
+}
 
  .go_to_home, .go_to_profile{
    display: block;
